# SCNU-Twin-Headed-Sentry

./: .gitignore  LICENSE  README.md  rebuild.bash  save_grid_map.sh
src/Twin-Headed-Sentry-Nav/rm_bringup/: CMakeLists.txt  package.xml
src/Twin-Headed-Sentry-Nav/rm_bringup/config/: MID360_config.json  fastlio_mid360.yaml  icp_node_params.yaml  mapper_params_localization.yaml  nav2_params_real.yaml  nav2_params_sim.yaml  segmentation_params.yaml
src/Twin-Headed-Sentry-Nav/rm_bringup/launch/: bringup_real.launch.py  bringup_sim.launch.py  common.py
src/Twin-Headed-Sentry-Nav/rm_bringup/map/: test1.data  test1.pgm  test1.yaml
src/Twin-Headed-Sentry-Nav/rm_decision/: CMakeLists.txt  package.xml
src/Twin-Headed-Sentry-Nav/rm_decision/include/: decision.hpp
src/Twin-Headed-Sentry-Nav/rm_decision/src/: decision.cpp  decision_test.cpp  sim_pub.cpp
src/Twin-Headed-Sentry-Nav/rm_localization/FAST_LIO/Log/: mat_pre.txt
src/Twin-Headed-Sentry-Nav/rm_localization/FAST_LIO/config/: mid360.yaml
src/Twin-Headed-Sentry-Nav/rm_localization/FAST_LIO/src/: laserMapping.cpp
src/Twin-Headed-Sentry-Nav/rm_localization/icp_localization_ros2/config/: node_params.yaml
src/Twin-Headed-Sentry-Nav/rm_navigation/: CMakeLists.txt
src/Twin-Headed-Sentry-Nav/rm_navigation/launch/: bringup_rm_navigation.py  localization_amcl_launch.py
src/Twin-Headed-Sentry-Nav/rm_perception/pointcloud_downsampling/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  package.xml
src/Twin-Headed-Sentry-Nav/rm_perception/pointcloud_downsampling/config/: pointcloud_downsampling.yaml
src/Twin-Headed-Sentry-Nav/rm_perception/pointcloud_downsampling/include/: pointcloud_downsampling.h
src/Twin-Headed-Sentry-Nav/rm_perception/pointcloud_downsampling/launch/: pointcloud_downsampling.launch.py
src/Twin-Headed-Sentry-Nav/rm_perception/pointcloud_downsampling/src/: voxel_filtering.cpp
src/Twin-Headed-Sentry-Nav/rm_simulation/pb_rm_simulation/: package.xml
src/Twin-Headed-Sentry-Nav/rm_simulation/pb_rm_simulation/launch/: rm_real.launch.py  rm_simulation.launch.py
src/Twin-Headed-Sentry-Nav/rm_simulation/pb_rm_simulation/urdf/: real_waking_robot.xacro  simulation_waking_robot.xacro
src/Twin-Headed-Sentry-RV/: read.md
src/Twin-Headed-Sentry-RV/info_separate/src/: camera_info_seprate.cpp
src/Twin-Headed-Sentry-RV/rm_auto_aim-main/auto_aim_interfaces/: CMakeLists.txt
src/Twin-Headed-Sentry-RV/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/Twin-Headed-Sentry-RV/rm_serial_driver/src/: rm_serial_driver.cpp
src/Twin-Headed-Sentry-RV/ros2-hik-camera/config/: camera_info.yaml  camera_params.yaml
src/Twin-Headed-Sentry-RV/ros2-hik-camera_second/config/: camera_info.yaml
(+10 files in other folders)
