<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_downsampling</name>
  <version>1.0.0</version>
  <description>Downsampling pointcloud2 using voxel viltering</description>
  <maintainer email="1120220476@smbu.edu.cn">Lihan Chen</maintainer>
  <license>MIT</license>
  <author email="1120220476@smbu.edu.cn">Lihan Chen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>PCL</depend>
  <depend>sensor_msgs</depend>

  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
